ci: rename correctly the job

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
 jobs:
-  build-and-deploy:
+  test:
     concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
     steps:
