chore: rename the project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
   "deno.unstable": true,
   "cSpell.words": [
     "Deno",
-    "Stringifyable"
+    "MetavaScript"
   ],
   "workbench.colorCustomizations": {
     "activityBar.activeBackground": "#2f7c47",
